reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__envelope.rs_line_1089_col_5.log

*** crates/tracewake-core/src/events/envelope.rs:1089:5: replace deserialize_source_id -> Result<SchedulerSourceId, EventEnvelopeParseError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/envelope.rs
+++ replace deserialize_source_id -> Result<SchedulerSourceId, EventEnvelopeParseError> with Ok(Default::default())
@@ -1081,25 +1081,17 @@
     match source_id {
         SchedulerSourceId::Actor(id) => format!("actor:{}", id.as_str()),
         SchedulerSourceId::Controller(id) => format!("controller:{}", id.as_str()),
         SchedulerSourceId::Process(id) => format!("process:{}", id.as_str()),
     }
 }
 
 fn deserialize_source_id(value: &str) -> Result<SchedulerSourceId, EventEnvelopeParseError> {
-    let (kind, value) = value
-        .split_once(':')
-        .ok_or(EventEnvelopeParseError::UnknownSchedulerSource)?;
-    match kind {
-        "actor" => Ok(SchedulerSourceId::Actor(ActorId::new(value)?)),
-        "controller" => Ok(SchedulerSourceId::Controller(ControllerId::new(value)?)),
-        "process" => Ok(SchedulerSourceId::Process(ProcessId::new(value)?)),
-        _ => Err(EventEnvelopeParseError::UnknownSchedulerSource),
-    }
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn serialize_cause(cause: &EventCause) -> String {
     match cause {
         EventCause::Event(id) => format!("event:{}", id.as_str()),
         EventCause::Proposal(id) => format!("proposal:{}", id.as_str()),
         EventCause::ValidationReport(id) => format!("validation_report:{}", id.as_str()),
         EventCause::Process(id) => format!("process:{}", id.as_str()),


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/envelope.rs` has changed (1781910974.347924547s, 3s after last build at 1781910971.971924543s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `ControllerId`
 --> crates/tracewake-core/src/events/envelope.rs:3:56
  |
3 |     ActionId, ActorId, ContainerId, ContentManifestId, ControllerId, EventId, PlaceId, ProcessId,
  |                                                        ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `SchedulerSourceId: Default` is not satisfied
    --> crates/tracewake-core/src/events/envelope.rs:1089:8
     |
1089 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `SchedulerSourceId`
    --> crates/tracewake-core/src/scheduler.rs:19:1
     |
  19 | pub enum SchedulerSourceId {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `scheduler::SchedulerSourceId: Default` is not satisfied
    --> crates/tracewake-core/src/events/envelope.rs:1089:8
     |
1089 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `scheduler::SchedulerSourceId`
    --> crates/tracewake-core/src/scheduler.rs:19:1
     |
  19 | pub enum SchedulerSourceId {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `tracewake-core` (lib test) generated 1 warning
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
